clang/test/BSC/Negative/Trait/r1/definition_13/definition_13.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F {
  int foo(This* this);
};

int get(_Trait F* f) {
  return 1;
};

int main() {
  int a = 1;
  int b = get(&a); // expected-error {{expected a pointer type which has implemented '_Trait F', found 'int'}}
  return 0;
}
